Modify specific css class to generic class in table component

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ end</code></pre>
                     <h1 class="sutd-project">SUTD Project</h1>
 
                     <h2 class="sutd-project">Tables</h2>
-                    <table class="sutd-table">
+                    <table class="styleguide-table">
                         <thead>
                             <tr class="table-header-row">
                                 <th>Organization</th>
