Change specific styles and CSS classes to general

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                                     <a class="hash-link nav-link" href="#footer" title="Footer">Footer</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="hash-link nav-link" href="#sutd" title="Footer">SUTD Project</a>
+                                    <a class="hash-link nav-link" href="#tables" title="Footer">Tables</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="hash-link nav-link" href="#labels" title="Footer">Labels</a>
                                 </li>
                             </ul>
                         </div>
@@ -739,11 +742,10 @@ end</code></pre>
                     </div>
                 </div>
 
-                <div id="sutd" class="section section__sutd">
-                    <h1 class="sutd-project">SUTD Project</h1>
+                <div id="tables" class="section">
 
-                    <h2 class="sutd-project">Tables</h2>
-                    <table class="styleguide-table">
+                    <h2 class="styleguide-title">Tables</h2>
+                    <table class="table">
                         <thead>
                             <tr class="table-header-row">
                                 <th>Organization</th>
@@ -776,7 +778,7 @@ end</code></pre>
                                 <tr class="">
                                 <td class="max-cell">Company Name</td>
                                 <td class="max-cell"><a href="">GitRepoName</a></td>
-                                <td><span class="status-label __pending">Pending</span></td>
+                                <td><span class="status-label __rejected">Rejected</span></td>
                                 <td class="min-cell right-cell">100%</td>
                                 <td class="min-cell right-cell">100%</td>
                                 <td></td>
@@ -784,35 +786,17 @@ end</code></pre>
                             
                         </tbody>
                     </table>
+                </div>
 
-                    <h2 class="sutd-project" style="margin-top: 1rem">Labels</h2>
-
-                    <div class="flex-container" style="display: flex;">
-                        <span class="status-label __accepted">Accepted</span>
-                        <span class="status-label __pending">Pending</span>
-                        <span class="status-label __rejected">Rejected</span>
-                        <span class="status-label __open">Open</span>
-                        <span class="status-label __closed">Closed</span>
-                    </div>
-
-                    <h2 class="sutd-project" style="margin-top: 1rem">Forms</h2>
-
-                    <div class="form">
-                        <form action="#" class="sutd">
-                            <div class="input-container col-sm-6">
-                                <input type="text" id="input-01" class="input-text" />
-                                <label for="input-01">Label input</label>
-                                <p>Input</p>
-                            </div>
-                            <div class="input-container col-sm-6">
-                                <input type="text" id="input-02" class="input-text" value="Text" autofocus/>
-                                <label for="input-02">Label input</label>
-                                <p>Input active</p>
-                            </div>
-                        </form>
-                    </div>
-
-                    
+                <div id="labels" class="section">
+                    <h2 class="styleguide-title">Labels</h2>
+                        <div class="flex-container" style="display: flex;">
+                            <span class="status-label __accepted">Accepted</span>
+                            <span class="status-label __pending">Pending</span>
+                            <span class="status-label __rejected">Rejected</span>
+                            <span class="status-label __open">Open</span>
+                            <span class="status-label __closed">Closed</span>
+                        </div>
                 </div>
 
             </div>
